--- a/package.json
+++ b/package.json
@@ -1,18 +1,50 @@
 {
-  "name": "mobile",
+  "name": "laundrybd-mobile",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:dev-a": "eas build --profile development --platform android",
+    "build:prod-a": "eas build --profile production --platform android",
+    "build:prod-ios": "eas build --profile production --platform ios",
+    "set:version": "eas build:version:set",
+    "submit:ios": "eas submit -p ios --latest",
+    "update:prod": "APP_ENV=production eas update --channel production",
+    "ts:check": "tsc",
+    "apk:build": "eas build -p android --profile preview",
+    "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/themed": "^1.1.73",
+    "@hookform/resolvers": "^5.2.2",
+    "@shopify/flash-list": "^2.2.0",
+    "@tabler/icons-react-native": "^3.36.1",
+    "@tanstack/react-query": "^5.90.19",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
+    "expo-constants": "^18.0.13",
+    "expo-dev-client": "^6.0.20",
+    "expo-linking": "^8.0.11",
+    "expo-router": "^6.0.21",
+    "expo-secure-store": "^15.0.8",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.7.4",
+    "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-hook-form": "^7.71.1",
+    "react-i18next": "^16.5.3",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "^15.15.1",
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
