--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next": "^25.7.4",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.3",
     "react-native": "0.81.5",
