--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   # Directory to publish (the Expo web export output)
   publish = "dist"
   # Build command
-  command = "npx expo export --platform web"
+  command = "pnpm run build:web"
 
 # SPA redirect - all routes should serve index.html
 [[redirects]]
