--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo export --platform web",
     "build:dev-a": "eas build --profile development --platform android",
     "build:prod-a": "eas build --profile production --platform android",
     "build:prod-ios": "eas build --profile production --platform ios",
